<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/previewImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/preview_for_camera_capture_or_import_image"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_image_holder" />

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/galery"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/postDescriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/previewImage" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/camera"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/postDescriptionEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/previewImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postDescriptionEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postDescriptionEditText"
            android:hint="@string/description_text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:ems="10"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/post"
        android:textColor="@color/blue_link"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/postDescriptionEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/postDescriptionEditTextLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>