<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/ivAccount"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:alpha="0.7"
        android:contentDescription="@string/account_image_by_user"
        android:src="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_text"
        android:textColor="?attr/android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAccount" />

    <TextView
        android:id="@+id/tvSubWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_welcome_text"
        android:textSize="16sp"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_constraintStart_toStartOf="@+id/tvWelcome"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="380dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text_view"
        app:layout_constraintStart_toStartOf="@+id/tvSubWelcome"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:textColor="?attr/android:textColorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail"
        app:startIconDrawable="@drawable/ic_email">

        <com.application.mystoryapp.customedittext.EmailEditText
            android:id="@+id/emailEditText"
            android:paddingVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text_view"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
        android:textColor="?attr/android:textColorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword"
        app:startIconDrawable="@drawable/ic_password">

        <com.application.mystoryapp.customedittext.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingVertical="20dp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="?attr/android:textColorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/tvLinkRegist"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/tvLinkRegist"
        android:textColor="@color/blue_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text="@string/login_button"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextLayout"
        android:textColor="@color/blue_link"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>